--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 insightface==0.7.3
+onnxruntime==1.16.3
 opencv-python==4.8.1.78
 Pillow==10.1.0
 numpy==1.24.3
